# 1fxmod-sof2plus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: game.cmake  identity.cmake
cmake/compilers/: gcc.cmake  gnu.cmake  msvc.cmake
cmake/utils/: arch.cmake
files/demo/1fx/: Config.cfg  Start Server.bat  s2pserver.cfg
files/demo/1fx/botfiles/: Apperloo.bot
files/demo/1fx/files/: mapcycle.txt
files/demo/1fx/files/mvchats/: mptest.mvchat
files/demo/1fx/maps/dm/: mp_shop.ent
files/demo/1fx/maps/elim/: mp_shop.ent
files/demo/1fx/maps/inf/: mp_shop.ent
files/demo/1fx/maps/tdm/: mp_shop.ent
files/demo/1fx/scripts/: mp_shop.arena
files/demo/1fx/weaponfiles/: nd.wpn  rd.wpn
files/gold/1fx/: 1fx_coreUI_1.21.pk3  Config.cfg  ROCmod_1fx_coreUI_1.21.pk3  s2pserver.cfg
files/gold/1fx/botfiles/: ErnieTV.bot  Pacifist.bot
files/gold/1fx/core/: inview.db
files/gold/1fx/files/: CustomCommands.txt  mapcycle.txt  tips.txt
files/gold/1fx/files/mvchats/: extended.mvchat
files/gold/1fx/maps/ctf/: mp_kam2.ent
files/gold/1fx/maps/h&s/: air2.ent  col2.ent  col9.ent  mp_shop.ent  pra6.ent
files/gold/1fx/maps/inf/: mp_shop.ent
files/gold/1fx/scripts/: air3.arena  arm2.arena  cem1.arena  col9.arena  hos1.arena  kam2.arena  mp_finca.arena  mp_kam1.arena  pra6.arena  shop4.arena
files/gold/1fx/weaponfiles/: ctb.wpn  nd.wpn  rd.wpn
files/silver/1fx/: Config.cfg  Start Server.bat  s2pserver.cfg
files/silver/1fx/botfiles/: bots.txt
files/silver/1fx/core/: inview.db
files/silver/1fx/ext_data/RMG/: Readme.txt  h&s_medium.mission  h&s_small.mission  h&z_medium.mission  h&z_small.mission
files/silver/1fx/files/mvchats/: base.mvchat  rpm + extended.mvchat
files/silver/1fx/maps/alt/: air2_h&s.ent  kam2_ctf.ent  kam2_tdm.ent  mp_raven_ctf.ent
files/silver/1fx/maps/h&s/: air1.ent  air3.ent  air4.ent  arm1.ent  arm2.ent  cem1.ent  col3.ent  col4.ent  finca3.ent  hos1.ent
files/silver/1fx/scripts/: air1.arena  air2.arena  air4.arena  arm1.arena  col2.arena  col3.arena  col4.arena  finca3.arena  mp_raven.arena  mp_shop.arena
files/silver/1fx/weaponfiles/: h&s.wpn  nd.wpn  rd.wpn  zombies.wpn
trunk/game/: ai_util.c  ai_wpnav.c  bg_gametype.c  bg_player.c  bg_pmove.c  bg_public.h  bg_weapons.c  boe_local.h  boe_utils.c  g_admcmds.c  g_bot.c  g_cmds.c  g_crash.c  g_gametype.c  g_local.h  g_main.c  g_misc.c  g_mvchat.c  g_public.h  g_spawn.c  g_syscalls.c  g_weapon.c  game.sh  henkENT.c  henk_functions.c  q_math.c  q_shared.c  q_shared.h
